--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
+        working-directory: ./server
+      - run: yarn build
+        working-directory: ./server
       - run: yarn test
+        working-directory: ./server
+
